--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,63 +1,1 @@
-.btm{    margin-bottom: 0;}
-.btm h5 {margin: 22px;}
-.center{text-align:center;}
-.bound{padding:3em}
-.navbar-inverse {
-    background-color: #494c4b;
-    border-color: transparent;
-    box-shadow: 0 0 20px black;
-	border-radius:0;
-}
-.navbar-inverse .navbar-nav>li>a:hover,.navbar-brand>img:hover, .navbar-inverse .navbar-nav>li>a:focus {
-    color: #252525;
-}
-.result{padding:15px}
-#timestampGen{text-align:center}
-textarea.form-control {min-height: 250px!important;}
-::-webkit-scrollbar {
-  z-index: 30;
-  width: 8px;
-  height: 0;
-  y-index: hidden;
-}
-::-webkit-scrollbar-track {
-  background-color: #bbb;
-}
-::-webkit-scrollbar-thumb {
-  background-color: #ddd;
-}
-
-#modelBtn:active {
-  box-shadow: 0 0 15px 0 lightgrey inset; 
-  background-color: #EBEBEB;
-  z-index:99999;
-}
-
-#modelDiv {
-    position: fixed;
-    background-color: #3D3D3D;
-    width: 40%;
-    min-width: 300px;
-    padding: 1em 1em 3em 1em;
-    text-align: center;
-    margin-left: 30%;
-    border-radius: 5px;
-    z-index: 999999;
-    display: none;
-    cursor: pointer;
-    box-shadow: 0 0 20px black;
-}
-
-#modelDiv::before {
-  content: '';
-  background-color: rgba(0,0,0,0.5);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  /*must set z-index: -1 to keep the background behind the modal box*/
-  z-index: -1;
-}
-
-.closeBtn{background-image:url(../img/close.png)}
+.btm{margin-bottom:0}.btm h5{margin:22px}.center{text-align:center}.bound{padding:3em}.navbar-inverse{background-color:#494c4b;border-color:transparent;box-shadow:0 0 20px #000;border-radius:0}.navbar-brand>img:hover,.navbar-inverse .navbar-nav>li>a:focus,.navbar-inverse .navbar-nav>li>a:hover{color:#252525}.result{padding:15px}#timestampGen{text-align:center}textarea.form-control{min-height:250px!important}::-webkit-scrollbar{z-index:30;width:8px;height:0;y-index:hidden}::-webkit-scrollbar-track{background-color:#bbb}::-webkit-scrollbar-thumb{background-color:#ddd}#modelBtn:active{box-shadow:0 0 15px 0 lightgrey inset;background-color:#EBEBEB;z-index:99999}#modelDiv{position:fixed;background-color:#3D3D3D;width:40%;min-width:300px;padding:1em 1em 3em;text-align:center;margin-left:30%;border-radius:5px;z-index:999999;display:none;cursor:pointer;box-shadow:0 0 20px #000}#modelDiv::before{content:'';background-color:rgba(0,0,0,.5);position:fixed;top:0;left:0;right:0;bottom:0;z-index:-1}.closeBtn{background-image:url(../img/close.png)}
